--- a/second.html
+++ b/second.html
@@ -876,7 +876,7 @@
     5.15 inch Full HD Display
   </li>
   <li id="LI_4">
-    16MP Primary Camera | 4MP Fron
+    16MP Primary Camera | 4MP Front
   </li>
   <li id="LI_5">
     3000 mAh Li-Ion Polymer Battery
@@ -935,15 +935,11 @@
   <a href="web.html">1</a>
   <a href="second.html" class="active">2</a>
   <a href="third.html">3</a>
-  <a href="#">4</a>
+  <a href="fourth.html">4</a>
   <a href="#">5</a>
-  <a href="#">6</a>
-  <a href="#">7</a>
-  <a href="#">8</a>
-  <a href="#">9</a>
-  <a href="#">10</a>
   <a href="#">&raquo;</a>
 </div>
+<br/>
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"><br>Top</span>
   </a>
