--- a/web.html
+++ b/web.html
@@ -405,7 +405,7 @@ li a:hover {
 			
 		</li>
 		<li>
-      <a id="anchor" href="#first">
+      <a id="anchor" href="samsung.html">
 			Samsung
       </a>
 		</li>
@@ -1671,7 +1671,7 @@ $(document).scroll(function() {
 });
 $(document).on("scroll", function(){ 
 // or as a shorthand $(document).scroll(function(){
-if($(document).scrollTop() > 1110 && $(document).scrollTop() < 2960)
+if($(document).scrollTop() > 1210 && $(document).scrollTop() < 2960)
     {
         //begin to scroll
         $("#floating_list").css("position","fixed");
