--- a/samsung.html
+++ b/samsung.html
@@ -227,12 +227,13 @@
     border-radius: 5px;
 }
 .mobiles{
-  margin-top: 15%;
+  margin-top: -4%;
   padding-left: 250px;
+  padding-top: 4%;
   background-color: none;
 }
 .brand{
-  background-color: white;
+  background: linear-gradient(to bottom right , #3e3e3e, #cecece);
 }
 #search{
   display: inline-block;
@@ -245,7 +246,7 @@
 
 </head>
 <body>
-    <div id="homepg">
+    <header><div id="homepg">
 <nav class="navbar navbar-default navbar-fixed-top slide">
   <div class="container">
     <span class="navbar-header">
@@ -264,18 +265,16 @@
   </div>
     <span class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#home"><h4>HOME</h4></a></li>
+        <li><a href="web.html"><h4>HOME</h4></a></li>
         <li><a href="#pricing"><h4>PRICING</h4></a></li>
         <li><a href="#contact"><h4>CONTACT</h4></a></li>
       </ul>
     </span>
   </div>
 </nav>
-<footer class="container-fluid text-center" id="startchange">
-  <a href="#trending" title="To Trending">
-    <span class="glyphicon glyphicon-chevron-down glyphicon-white glyphicon-ring"></span>
-  </a><div id="trending"></div></footer> 
-</div><br><br>
+</div>
+</header>
+<br><br>
     <div class="brand" id="samsung">
     <div class="mobiles">
     <li id="LI_1">
@@ -914,13 +913,15 @@
 </li>
 <br/><br/>
 </div>
-</div>
+
 <footer class="text-center">
 <br/><div class="bg-1"><br/><br/>
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br/><br/><br>
   <p>Copyright 2017 Best 'O' Mania | All rights reserved.<a href="#myPage"><br/>BEST 'O' MANIA</a></p>
+  </div>
 </footer>
+</div>
 </body>
 </html>
