--- a/samsung.html
+++ b/samsung.html
@@ -26,12 +26,10 @@
            z-index: -100;
           
     }
-
     #myNavbar{
       padding-left: 63%;
     margin-top: -8%;
     }
-
     #first{
       margin-left: 10%;
     }
@@ -140,15 +138,12 @@
     background-image: none;
     color: #005ff7;
 }
-
 .carousel-indicators li {
     border-color: #005fa7;
 }
-
 .carousel-indicators li.active {
     background-color: #005fa7;
 }
-
 .item img{
   height: 100%;
   width: 
@@ -162,6 +157,7 @@
     background-image: url("foot1.png");
     color: darkblue;
     padding: 0px;
+    text-decoration: none;
     font-weight: bold;
     bottom: 0;
     margin-bottom: -50px;
@@ -169,6 +165,7 @@
 }
 .bg-2{
     background: #005fa7;
+    text-decoration: none;
 }
 #write{
     text-shadow: 3px white;
@@ -208,20 +205,17 @@
     margin-left: 30%;
     margin-right: 29%;
 }
-
 .pagination a {
     color: black;
     float: left;
     padding: 8px 16px;
     text-decoration: none;
 }
-
 .pagination a.active {
     background-color: #4CAF50;
     color: white;
     border-radius: 5px;
 }
-
 .pagination a:hover:not(.active) {
     background-color: #ddd;
     border-radius: 5px;
@@ -240,12 +234,12 @@
   margin-top: 1.5%;
     /* margin-left: 7.5%; */
     padding-left: 25px;
-
 }
+
 </style>
 
 </head>
-<body>
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
     <header><div id="homepg">
 <nav class="navbar navbar-default navbar-fixed-top slide">
   <div class="container">
@@ -570,8 +564,8 @@
             </button>
           </li>
           <li id="LI_51">
-            <button id="BUTTON_52">
-              Snapdeal<b id="STRONG_53">‎N/A</b>
+            <button id="BUTTON_52"><strike>
+              Snapdeal<b id="STRONG_53">‎N/A</b></strike>
             </button>
           </li>
         </ul>
@@ -582,7 +576,7 @@
           <div id="DIV_58">
 
             <div id="DIV_59">
-              <em id="EM_60">Flipkart</em>
+              <em id="EM_60">Amazon</em>
               <meta content="5579" id="META_61" />
               <meta content="3480" id="META_62" /> ‎ <strong id="STRONG_64">‎₹12,990</strong>
             </div>
